blockhound 라이브러리 추가하여 동기 구현 찾기 가능해짐

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,12 @@ spring:
     hidden-method:
       filter:
         enabled: true
+
 de:
   flapdoodle:
     mongodb:
       embedded:
         version: 3.6.0
+logging:
+  level:
+    web: DEBUG
