--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ dependencies {
 	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.3.2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.mongodb:mongodb-driver-sync:4.8.1'
+
+	compileOnly 'io.projectreactor.tools:blockhound:1.0.6.RELEASE'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 }
