--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,26 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.mongodb:mongodb-driver-sync:4.8.1'
 
-	compileOnly 'io.projectreactor.tools:blockhound:1.0.6.RELEASE'
-
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// https://kevin-park.medium.com/springboot-webflux-with-blockhound-9a7711dab6a8
+	testImplementation 'io.projectreactor.tools:blockhound-junit-platform:1.0.6.RELEASE'
+	testImplementation 'org.junit.platform:junit-platform-launcher:1.8.0-M1'
+	testImplementation 'com.google.auto.service:auto-service:1.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(Test).all {
+	if (JavaVersion.current() >= JavaVersion.VERSION_13) {
+		jvmArgs += [
+				"-XX:+AllowRedefinitionToAddDeleteMethods"
+		]
+	}
 }
